<resources>
    <string name="app_name" translatable="false">Awesome Image Picker</string>

    <!--Request Permission-->
    <string name="permission_info">App requires permission to Storage to view media.</string>
    <string name="permission_force">App requires permission to Storage to view media. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_limited">You\'ve allowed access to limited media. Tap Manage to add more or allow access to all media.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_manage">Manage</string>
    <string name="permission_package">package</string>

    <string name="album_view">Select album</string>
    <string name="single_image_view">Select up to %1$d photo</string>
    <string name="single_video_view">Select up to %1$d video</string>
    <string name="image_view">Select up to %1$d photos</string>
    <string name="video_view">Select up to %1$d videos</string>
    <string name="media_view">Select up to %1$d photos and videos</string>

    <string name="item_selected">%1$d Item Selected</string>
    <string name="items_selected">%1$d Items Selected</string>
    <string name="image_limit_exceeded">Can select a maximum of %1$d photos</string>
    <string name="video_limit_exceeded">Can select a maximum of %1$d videos</string>
    <string name="media_limit_exceeded">Can select a maximum of %1$d photos and videos</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="add">DONE</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="activity_media_empty">You have no %1$s on your device to upload.</string>
    <string name="album_select_videos">videos</string>
    <string name="album_select_photos">photos</string>
    <string name="album_select_media">media</string>
    <string name="all_media">All Media</string>

    <string name="long_press_ftue_title">Quick Tips</string>
    <string name="long_press_ftue_message">Drag to select several photos at once. Press &amp; hold a photo to preview it.</string>
    <string name="long_press_ftue_button">Got it</string>

    <string name="tab_all_media">All Media</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_videos">Videos</string>
</resources>
