<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <in.myinnos.awesomeimagepicker.views.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/limited_access"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/settings"
            android:text="@string/permission_limited"
            android:textSize="12sp"
            android:textColor="#000000"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/settings"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/permission_manage"
            android:textColor="@color/greenfly_green"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:paddingTop="130dp"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_media_empty"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/error_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error_null_cursor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/limited_access"
        android:layout_above="@id/selected_count"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/selected_count"
        android:background="#e3e3e3"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>