<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp"
    android:visibility="gone"
    android:layout_gravity="center_vertical"
    android:background="#80000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_box_white"
        android:padding="30dp"
        android:orientation="vertical">

        <!-- FrameLayout is used to make a rounded edge clip around the video -->
        <FrameLayout
            android:id="@+id/preview_rounded_clip"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_video"
            android:outlineProvider="background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="#12263f"
            android:text="@string/long_press_ftue_title"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/long_press_ftue_message"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="#464646"
            android:textSize="15sp"/>

        <RelativeLayout
            android:layout_marginTop="35dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/done"
                android:background="@drawable/rounded_box_blue"
                android:text="@string/long_press_ftue_button"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="221dp"
                android:layout_height="45dp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>